05-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web # Statefulset name
spec:
  selector:
    matchLabels:
      app: nginx
  serviceName: "nginx"  # has to match .spec.template.metadata.labels, headless service named nginx is used to control network domain
  replicas: 3 #
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: nginx  # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: nginx
          image: registry.k8s.io/nginx-slim:0.8
          ports:
            - containerPort: 80
              name: web
          volumeMounts:
            - name: www
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
    - metadata:
        name: www # volumeClaimTemplates(name), provides stable storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "gp2"
        resources:
          requests:
            storage: 1Gi
