09-configmap.yml
kind: Pod
apiVersion: v1
metadata:
  name: pod-debug
spec:
  containers:
    - name: debug
      image: rkalluru/debug
---
kind: Pod
apiVersion: v1
metadata:
  name: pod-debug-cm
spec:
  containers:
    - name: debug
      image: rkalluru/debug
