12-network-policy.yml
## Ref : https://docs.aws.amazon.com/eks/latest/userguide/network-policies-troubleshooting.html

apiVersion: v1
kind: Namespace
metadata:
  name: web
  labels:
    ns: web
---
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    ns: app
---
kind: Pod
apiVersion: v1
metadata:
  name: pod-web-01
  namespace: web
  labels:
    appType: web
spec:
  containers:
    - name: nginx
      image: nginx
---
kind: Pod
apiVersion: v1
metadata:
  name: pod-app-01
  namespace: app
  labels:
    appType: app
spec:
  containers:
    - name: nginx
      image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: svc-web
  namespace: web
spec:
  type: ClusterIP
  selector:
    appType: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-app
  namespace: app
spec:
  type: ClusterIP
  selector:
    appType: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
kind: Pod
apiVersion: v1
metadata:
  name: pod-debug
  namespace: web
spec:
  containers:
    - name: debug
      image: rkalluru/debug
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-np-allow-complete-ns
  namespace: app
spec:
  podSelector:
    matchLabels:
      appType: app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              ns: web
        - podSelector:
            matchLabels:
              appType: web
      ports:
        - protocol: TCP
          port: 80
  egress:
    - {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
kind: Pod
apiVersion: v1
metadata:
  name: pod-debug-demo
  namespace: demo
spec:
  containers:
    - name: debug
      image: rkalluru/debug
